fix image sizing on mobile

--- a/converter.css
+++ b/converter.css
@@ -305,7 +305,7 @@ footer a {
 
 
     .input-section img {
-        height: 30vh;
+        height: 250px;
         width: auto;
     }
 
